--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
+    - name: Checkout Repository
       uses: actions/checkout@v3
 
     - name: Set up Python
@@ -25,15 +25,17 @@ jobs:
         sudo apt install -y python3-pip build-essential git python3-dev \
         libssl-dev libffi-dev libsqlite3-dev zlib1g-dev wget unzip
 
-    - name: Install Buildozer & Cython
-      run: |
-        pip install --upgrade buildozer cython
+    - name: Install Buildozer
+      run: pip install --upgrade buildozer cython
+
+    - name: Initialize Buildozer
+      run: buildozer init
 
     - name: Build APK
-      run: |
-        buildozer android debug || echo "Build started"
+      run: buildozer android debug || echo "Build started"
 
-    - name: Upload APK artifact
+    - name: Upload APK
+      if: always()
       uses: actions/upload-artifact@v3
       with:
         name: ChessApp-APK
