--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -12,8 +12,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout repository
-      - name: Checkout repo
+      # Step 1: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v3
 
       # Step 2: Set up Python
@@ -23,30 +23,42 @@ jobs:
           python-version: '3.11'
 
       # Step 3: Install system dependencies
-      - name: Install dependencies
+      - name: Install system dependencies
         run: |
           sudo apt update
           sudo apt install -y python3-pip python3-setuptools python3-wheel \
                               build-essential git python3-dev \
                               libssl-dev libffi-dev libsqlite3-dev zlib1g-dev \
-                              openjdk-11-jdk zipalign android-tools-adb wget unzip
+                              unzip wget openjdk-11-jdk zipalign android-tools-adb
 
       # Step 4: Install Buildozer & Cython
       - name: Install Buildozer
         run: pip install --upgrade buildozer cython
 
-      # Step 5: Verify Buildozer
+      # Step 5: Install Android SDK command-line tools
+      - name: Install Android SDK and Build Tools
+        run: |
+          mkdir -p $HOME/android-sdk/cmdline-tools
+          wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
+          unzip cmdline-tools.zip -d $HOME/android-sdk/cmdline-tools
+          mv $HOME/android-sdk/cmdline-tools/cmdline-tools $HOME/android-sdk/cmdline-tools/latest
+          export ANDROID_HOME=$HOME/android-sdk
+          export PATH=$PATH:$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/platform-tools
+          sdkmanager "platform-tools" "platforms;android-33" "build-tools;33.0.2"
+          yes | sdkmanager --licenses
+
+      # Step 6: Verify Buildozer
       - name: Verify Buildozer
         run: buildozer --version
 
-      # Step 6: Build the APK
+      # Step 7: Build APK
       - name: Build APK
         run: buildozer android debug
 
-      # Step 7: Upload APK artifact
+      # Step 8: Upload APK artifact
       - name: Upload APK
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: ChessApp-APK
-          path: bin/**/*.apk   # Catch APKs in any subfolder
+          path: bin/**/*.apk
