--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -12,17 +12,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout repository
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # 2️⃣ Set up Python
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
 
-      # 3️⃣ Install system dependencies
       - name: Install system dependencies
         run: |
           sudo apt update
@@ -31,12 +28,10 @@ jobs:
                               libssl-dev libffi-dev libsqlite3-dev zlib1g-dev \
                               unzip wget openjdk-11-jdk zipalign android-tools-adb
 
-      # 4️⃣ Install Buildozer & Cython
-      - name: Install Buildozer
+      - name: Install Buildozer & Cython
         run: pip install --upgrade buildozer cython
 
-      # 5️⃣ Install Android SDK & Build Tools (stable)
-      - name: Install Android SDK
+      - name: Install Android SDK & Build Tools
         run: |
           mkdir -p $HOME/android-sdk/cmdline-tools
           wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
@@ -44,18 +39,17 @@ jobs:
           mv $HOME/android-sdk/cmdline-tools/cmdline-tools $HOME/android-sdk/cmdline-tools/latest
           export ANDROID_HOME=$HOME/android-sdk
           export PATH=$PATH:$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/platform-tools
+
+          # Install only stable platform & build-tools
           sdkmanager "platform-tools" "platforms;android-33" "build-tools;33.0.2"
           yes | sdkmanager --licenses
 
-      # 6️⃣ Verify Buildozer
       - name: Verify Buildozer
         run: buildozer --version
 
-      # 7️⃣ Build APK
       - name: Build APK
         run: buildozer android debug
 
-      # 8️⃣ Upload APK artifact
       - name: Upload APK
         if: always()
         uses: actions/upload-artifact@v4
