--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -8,18 +8,19 @@ on:
 
 jobs:
   build:
-    name: Build APK with Buildozer
     runs-on: ubuntu-latest
-
     steps:
+      # 1. Checkout the repo
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      # 2. Set up Python
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
 
+      # 3. Install system dependencies
       - name: Install system dependencies
         run: |
           sudo apt update
@@ -28,10 +29,12 @@ jobs:
                               libssl-dev libffi-dev libsqlite3-dev zlib1g-dev \
                               unzip wget openjdk-11-jdk zipalign android-tools-adb
 
-      - name: Install Buildozer & Cython
+      # 4. Install Buildozer & Cython
+      - name: Install Buildozer
         run: pip install --upgrade buildozer cython
 
-      - name: Install Android SDK & Build Tools
+      # 5. Install Android SDK command-line tools
+      - name: Install Android SDK and Build Tools
         run: |
           mkdir -p $HOME/android-sdk/cmdline-tools
           wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
@@ -39,17 +42,18 @@ jobs:
           mv $HOME/android-sdk/cmdline-tools/cmdline-tools $HOME/android-sdk/cmdline-tools/latest
           export ANDROID_HOME=$HOME/android-sdk
           export PATH=$PATH:$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/platform-tools
-
-          # Install only stable platform & build-tools
-          sdkmanager "platform-tools" "platforms;android-33" "build-tools;33.0.2"
           yes | sdkmanager --licenses
+          sdkmanager "platform-tools" "platforms;android-33" "build-tools;33.0.2" "ndk;25.1.8937393"
 
+      # 6. Verify Buildozer
       - name: Verify Buildozer
         run: buildozer --version
 
+      # 7. Build APK
       - name: Build APK
         run: buildozer android debug
 
+      # 8. Upload APK artifact
       - name: Upload APK
         if: always()
         uses: actions/upload-artifact@v4
