--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -2,85 +2,66 @@ name: Build Chess App APK
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      # 1. Checkout the repo
-      - name: Checkout repository
+      - name: Checkout repo
         uses: actions/checkout@v3
 
-      # 2. Set up Python
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: "3.11"
 
-      # 3. Cache Python packages
-      - name: Cache pip packages
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
-
-      # 4. Install system dependencies
-      - name: Install system dependencies
-        run: |
-          sudo apt update
-          sudo apt install -y python3-pip python3-setuptools python3-wheel \
-                              build-essential git python3-dev \
-                              libssl-dev libffi-dev libsqlite3-dev zlib1g-dev \
-                              unzip wget openjdk-11-jdk zipalign android-tools-adb
-
-      # 5. Cache Buildozer & Android SDK
-      - name: Cache Buildozer & Android SDK
+      # Cache Buildozer and Android SDK
+      - name: Cache Buildozer & SDK
         uses: actions/cache@v3
         with:
           path: |
-            ~/.buildozer
-            ~/.android
-          key: ${{ runner.os }}-buildozer-${{ hashFiles('**/buildozer.spec') }}
-          restore-keys: |
-            ${{ runner.os }}-buildozer-
+            .buildozer
+            android-sdk
+          key: ${{ runner.os }}-buildozer-${{ hashFiles('buildozer.spec') }}
 
-      # 6. Install Buildozer & Cython
+      # Install Linux dependencies
+      - name: Install system dependencies
+        run: |
+          sudo apt update
+          sudo apt install -y build-essential git python3-dev \
+              libssl-dev libffi-dev libsqlite3-dev zlib1g-dev \
+              unzip wget openjdk-11-jdk
+
+      # Install Buildozer
       - name: Install Buildozer
         run: pip install --upgrade buildozer cython
 
-      # 7. Install Android SDK command-line tools
-      - name: Install Android SDK and Build Tools
+      # Install Android SDK
+      - name: Install Android SDK
         run: |
-          mkdir -p $HOME/android-sdk/cmdline-tools
-          wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
-          unzip cmdline-tools.zip -d $HOME/android-sdk/cmdline-tools
-          mv $HOME/android-sdk/cmdline-tools/cmdline-tools $HOME/android-sdk/cmdline-tools/latest
-          export ANDROID_HOME=$HOME/android-sdk
+          export ANDROID_HOME=$GITHUB_WORKSPACE/android-sdk
+          mkdir -p $ANDROID_HOME/cmdline-tools
+          wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O tools.zip
+          unzip tools.zip -d $ANDROID_HOME/cmdline-tools
+          mv $ANDROID_HOME/cmdline-tools/cmdline-tools $ANDROID_HOME/cmdline-tools/latest
+
           export PATH=$PATH:$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/platform-tools
           yes | sdkmanager --licenses
           sdkmanager "platform-tools" "platforms;android-33" "build-tools;33.0.2" "ndk;25.1.8937393"
 
-      # 8. Accept any remaining Android SDK licenses
-      - name: Accept Android SDK licenses
-        run: yes | $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses
-
-      # 9. Initialize Buildozer (creates .spec if missing)
-      - name: Initialize Buildozer
-        run: buildozer init || echo ".spec already exists"
-
-      # 10. Build APK
+      # Build APK
       - name: Build APK
-        run: buildozer android debug || echo "Build started"
+        run: |
+          export ANDROID_HOME=$GITHUB_WORKSPACE/android-sdk
+          export PATH=$PATH:$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/platform-tools
+          buildozer android debug
 
-      # 11. Upload APK artifact
+      # Upload APK
       - name: Upload APK
-        if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: ChessApp-APK
-          path: bin/**/*.apk
+          name: ProfessionalChess-APK
+          path: bin/*.apk
